--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ pytest = "^7.2.2"
 behave = "^1.2.6"
 black = "^23.1.0"
 mypy = "^1.1.1"
+bandit = "^1.7.5"
+types-pyyaml = "^6.0.12.9"
 
 [build-system]
 requires = ["poetry-core"]
